syntax = "proto2";

message ClientPayload{
	optional uint64 username = 1;
	optional bool passive = 3;
	repeated ClientFeature client_features = 4;
	optional UserAgent user_agent = 5;
	optional WebInfo web_info = 6;
	optional string push_name = 7;
	optional sfixed32 session_id = 9;
	optional bool short_connect = 10;
	optional ConnectType connect_type = 12;
	optional ConnectReason connect_reason = 13;
	repeated sfixed32 shards = 14;
	optional DnsSource dns_source = 15;
	
	message DnsSource{
		optional DnsMethod dnsMethod = 15;
		optional bool appCached = 16;

		enum DnsMethod{
			METHOD_0 = 0;
			METHOD_1 = 1;
			METHOD_2 = 2;
			METHOD_3 = 3;
		}
	}
	message UserAgent{
		optional Platform platform = 1 [default=ANDROID];
		optional AppVersion app_version = 2;
		optional string mcc = 3;
		optional string mnc = 4;
		optional string os_version = 5;
		optional string manufacturer = 6;
		optional string device = 7;
		optional string os_build_number = 8;
		optional string phone_id = 9;
		optional ReleaseChannel release_channel = 10 [default=RELEASE];
		optional string locale_language_iso_639_1 = 11;
		optional string local_country_iso_3166_1_alpha_2 = 12;

		message AppVersion{
			optional uint32 primary = 1;
			optional uint32 secondary = 2;
			optional uint32 tertiary = 3;
			optional uint32 quaternary = 4;
		}
		enum Platform{
			ANDROID = 0;
			IOS = 1;
			WINDOWS_PHONE = 2;
			BLACKBERRY = 3;
			BLACKBERRYX = 4;
			S40 = 5;
			S60 = 6;
			PYTHON_CLIENT = 7;
			TIZEN = 8;
			ENTERPRISE = 9;
			PLATFORM_10 = 10;
			PLATFORM_11 = 11;
		}
		enum ReleaseChannel{
			RELEASE = 0;
			BETA = 1;
			ALPHA = 2;
			DEBUG = 3;
		}
	}
	message WebInfo{
		optional string ref_token = 1;
		optional string version = 2;
		optional WebdPayload webd_payload = 3;

		message WebdPayload{
			optional bool uses_participant_in_key = 1;
			optional bool supports_starred_messages = 2;
			optional bool supports_document_messages = 3;
			optional bool supports_url_messages = 4;
			optional bool supports_media_retry = 5;
			optional bool supports_e2e_image = 6;
			optional bool supports_e2e_video = 7;
			optional bool supports_e2e_audio = 8;
			optional bool supports_e2e_document = 9;
			optional string document_types = 10;
		}
	}
	enum ClientFeature{
		NONE = 0;
	}
	enum ConnectType{
		UNKNOWN = 0;
		WIFI = 1;
		EDGE = 100;
		IDEN = 101;
		UMTS = 102;
		EVDO = 103;
		GPRS = 104;
		HSDPA = 105;
		HSUPA = 106;
		HSPA = 107;
		CDMA = 108;
		ONExRTT = 109;
		EHRPD = 110;
		LTE = 111;
		HSPAP = 112;
	}
	enum ConnectReason{
		REASON_0 = 0;
		REASON_1 = 1;
		REASON_2 = 2;
		REASON_3 = 3;
		REASON_4 = 4;
		REASON_5 = 6;
	}
	enum IosAppExtension{
		EXT_0 = 0;
		EXT_1 = 1;
		EXT_2 = 2;
	}
}

message HandshakeMessage{
	optional ClientHello client_hello = 2;
	optional ServerHello server_hello = 3;
	optional ClientFinish client_finish = 4;

	message ClientHello{
		optional bytes ephemeral = 1;
		optional bytes static = 2;
		optional bytes payload = 3;
	}
	message ServerHello{
		optional bytes ephemeral = 1;
		optional bytes static = 2;
		optional bytes payload = 3;
	}
	message ClientFinish{
		optional bytes static = 1;
		optional bytes payload = 2;
	}
}

message NoiseCertificate{
	optional bytes details = 1;
	optional bytes signature = 2;

	message Details{
		optional uint32 serial = 1;
		optional string issuer = 2;
		optional uint64 expires = 3;
		optional string subject = 4;
		optional bytes key = 5;
	}
}